2010-02-10  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpcached/strategy_base.py:
	Fixed a bug when temporary files creation failed synchronously.

2010-02-09  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/ui/linkwidget.py:
	Add a fake set_tooltip_text method to LinkWidget for when it is not
	available (it was introduced in PyGTK 2.12)

2010-02-03  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* flumotion/monitor/nagios/stream.py:
	Adding a simple nagios check for HLS stream.
	Removing 'token' dead code.

2010-01-22  Julien Le Goff  <jlegoff@flumotion.com>

	* flumotion/component/plugs/manhole.py:
	Fixed syntax error.

2010-01-22  Julien Le Goff  <jlegoff@flumotion.com>

	reviewed by: Sébastien 

	* flumotion/component/plugs/manhole.py:
	* flumotion/component/plugs/plugs.xml:
	Created a component manhole based on the manager one.

2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/scenario/steps/conversionsteps.py:
	Forgot to commit the changes in this step at r8454. This will fetch the
	muxer plugin and check the elements the muxer needs in the worker side.

2010-01-21  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: xqueralt

	* flumotion/admin/gtk/componentlist.py:
	Sad component names in the admin component list are red
	Closes #990

2010-01-21  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: xqueralt

	* flumotion/component/producers/videotest/wizard.glade:
	* flumotion/component/producers/videotest/wizard_gtk.py:
	* data/image/wizard/Makefile.am:
	* data/image/wizard/pattern_blink.png (added):
	* data/image/wizard/pattern_black.png (added):
	* data/image/wizard/pattern_snow.png (added):
	* data/image/wizard/pattern_smpte.png (added):
	Add pattern example images on the video test source wizard page
	Closes #1092

2010-01-20  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas
