@@ -1,3 +1,10 @@
+2010-02-11  Josep Joan Ribas  <jribas@flumotion.com>
+
+	reviewed by: Zaheer Abbas Merali
+
+	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
+	Do not resend streamheader when it changes in the caps.
+
 2010-02-10  Sébastien Merle  <sebastien@flumotion.com>
 
 	* flumotion/component/misc/httpserver/httpcached/strategy_base.py:
